# hybrid-framework

./: .gitignore  CMakeLists.txt  LICENSE  build_solution_windows.bat
docs/: PLAN_DOKUMENTU.txt  chapter2.odt  spis_tresci_z_podzialem_prac.txt
docs/abstract/: abstract.doc
docs/chapter2/: 2_2_divide_conquer_doc.odt
docs/chapter2/subsection 2_2/: 2_2_divide_conquer_doc.odt
docs/chapter2/subsection 2_5/: 2_5_unified_memory.odt
docs/chapter2/subsection 2_6/: .~lock.2_6_existing_solutions.odt#  2_6_existing_solutions.odt
docs/chapter3/subsection 3_1/: 3_1_various_solutions_doc.odt
docs/chapter3/subsection 3_2/: 3_2_our_solution.odt
docs/chapter3/subsection 3_3/: .~lock.3_3_differents.odt#  3_3_differents.odt
docs/ending/: ending.odt
docs/sources/: sources.odt
results/: results_gpu.txt  results_hybrid.txt
results/linux/: results_gpu_tunning.txt  results_hybrid_perf.txt  results_hybrid_tunning.txt
results/linux/tunning/: results_gpu_tunning_1.txt  results_hybrid_tunning_2.txt
results/lukasz_desktop_linux/performance/: results_cpu_performance_0.txt  results_cpu_performance_1.txt  results_cpu_performance_2.txt  results_cpu_performance_3.txt  results_cpu_performance_4.txt  results_cpu_performance_collatz_0.txt  results_cpu_performance_collatz_1.txt  results_cpu_performance_collatz_2.txt  results_cpu_performance_collatz_3.txt  results_cpu_performance_collatz_4.txt  results_gpu_performance.txt  results_gpu_performance_1.txt  results_gpu_performance_2.txt  (+7 more)
src/: Algorithm.h  BinarySearch.cu  Engine.cpp  Engine.h  Helpers.h  LoadBalancer.cpp  LoadBalancer.h  MaxReduction.cu  MaxReduction.cuh  MaxReduction.h  PassManager.cpp  PassManager.h  PassManager.hpp  Processor.h  Sort.cu  Sort.cuh  dynamic_executor.h  hybrid_executor.h  kernel.h  load_balancer.cpp  load_balancer.cu  load_balancer.h  main.cpp  main.cu
tests/: blur_tests.cu  collatz.cu  configuration.h  main.cpp  math.cu  max_element.cu  sort_tests.cu  vector_add_tests.cu  vector_pow.cu
(+7 files in other folders)
